crates/tests/src/snapshots/fe_compiler_tests__compile_errors__binary_op_boolean_mismatch3.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: binary op `or` operands must have type `bool`
  ┌─ [snippet]:3:3
  │
3 │   1 or 2
  │   ^ this has type `u256`; expected `bool`

error: binary op `or` operands must have type `bool`
  ┌─ [snippet]:3:8
  │
3 │   1 or 2
  │        ^ this has type `u256`; expected `bool`


